# game_lights

./: .gitignore  Dockerfile  GEMINI.md  README.md  config.json  main.py  pyproject.toml
game_lights/: animations.py  controller.py  objects  pixel.py  strip.py  table.py
src/cli/: live_control.py  main.py  setup.py
src/led/: animations.py  config.py  controller.py  models.py  patterns.py  pixel.py  strip.py  table.py
systemd/: README.md  game-lights.service
