[project]
name = "game-lights"
version = "0.1.0"
description = "Python-based controller for WS281x LED strips"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rpi_ws281x",
]

[project.scripts]
game-lights = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
