[project]
name = "game-lights"
version = "0.1.0"
description = "Python-based controller for WS281x LED strips"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rpi_ws281x; sys_platform == 'linux'",
    "InquirerPy",
]

[project.scripts]
game-lights = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/led", "src/cli"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
